proj2_k8s/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ay262-elijah-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: eliburtner/seat-scout-backend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 3

        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
            ephemeral-storage: "256Mi"
          limits:
            cpu: "300m"
            memory: "512Mi"
            ephemeral-storage: "512Mi"

        securityContext:
          runAsUser: 10001
          runAsGroup: 10001
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
