proj2_k8s/backend/backend-load-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-load-test
  namespace: ay262-parker-namespace
spec:
  restartPolicy: Never
  containers:
    - name: load-test
      image: busybox
      resources:
        requests:
          cpu: "25m"
          memory: "256Mi"
          ephemeral-storage: "256Mi"
        limits:
          cpu: "100m"
          memory: "512Mi"
          ephemeral-storage: "512Mi"
      command:
        - /bin/sh
        - -c
        - |
          echo "Starting backend load test..."
          while true; do
            wget -q -O- http://backend-service:5000/ > /dev/null
          done
