proj2_k8s/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ay262-parker-namespace
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
